# BlockchainTechnologies

./: .gitignore  CMakeLists.txt  README.md  hashCli.cpp  main.cpp
include/: CliArgHandler.h  HashGenInterface.h  HashTests.h  Helper.h  HumanHash.h  MatrixHash.h  NikitaHash.h  OtherAlgorithms.h  PatrykHash.h  RandomGenerator.h  SlaSimHash.h  TestingFileGenerator.h  VibeHash.cpp  VibeHash.h  general.h  libs.h
include/Blockchain/: Blockchain.h  HeadBlock.h  MerkleTree.h  MiningSimulator.h  SystemAlgorithm.h  Transaction.h  TransactionQueue.h  UTXO.h  UTXOSystem.h  User.h  UserSystem.h
include/Blockchain/CLI/: BCliArgHandler.h  BCliReader.h
include/CLI/: CliArgHandler.h  HashTests.h
include/HashAlg/: HashGenInterface.h  HumanHash.h  MatrixHash.h  OtherAlgorithms.h
include/HashAlg/CLI/: CliArgHandler.h  HashTests.h  TestingFileGenerator.h
include/other-hash/: MarijusHash.h  MonikaHash.h  NikitaHash.h  PatrykHash.h  SlaSimHash.h
src/: CliArgHandler.cpp  HashTests.cpp  HashTests.h  HumanHash.cpp  HumanHash.h  MatrixHash.cpp  RandomGenerator.cpp  TestingFileGenerator.cpp  VibeHash.cpp
src/Blockchain/: MiningSimulator.cpp  Transaction.cpp  TransactionQueue.cpp  UTXO.cpp  UTXOSystem.cpp  UserSystem.cpp
src/Blockchain/CLI/: BCliArgHandler.cpp  BCliReader.cpp
src/CLI/: CliArgHandler.cpp  HashTests.cpp  TestingFileGenerator.cpp
